# logotron

./: .env.example  .gitignore  Dockerfile  README.md  bot.py  entrypoint.sh  pyproject.toml  run.py  run.sh
examples/: flag.logo  hexspiral.logo  randomwalk.logo  spiral.logo  sun.logo  wandermess.logo
examples/001/input/: program.logo
examples/002/input/: program.logo
examples/003/input/: program.logo
logotron/: bot.py  bot_test.py  client.py  config.py  logging.py  logo_runner.py  streaming.py
ucblogo-runner/: Dockerfile  build.sh  entrypoint.sh
ucblogo_runner/: entrypoint.sh
